# sandboxai

./: .gitignore  .pre-commit-config.yaml  Makefile  box.Dockerfile
.github/workflows/: publish-python.yaml  tests.yaml
api/: v1.yaml
docs/: README.md  contributing.md
go/: .gitignore  .goreleaser.yaml  go.mod  go.sum
go/api/v1/: gen.yaml  generate.go  types.gen.go
go/client/v1/: client.go
go/sandboxaid/: main.go
go/sandboxaid/client/: interface.go
go/sandboxaid/client/docker/: docker.go  utils.go  utils_test.go
go/sandboxaid/handler/: handler.go
go/test/e2e/: client_v1_test.go  main_test.go
go/tools/: README.md  go.mod
python/: .gitignore  pyproject.toml  setup.py
python/boxd/: main.py  requirements.txt
python/examples/: basic-with-logging.py  basic-with-options.py  basic.py  swarm-agent.py
python/sandboxai/: __init__.py  embedded.py  sandbox.py  sandbox_test.py
python/sandboxai/api/: v1.py
python/sandboxai/client/: v1.py
python/sandboxai/experimental/: crewai.py
python/sandboxai/integrations/: crewai.py
python/sandboxai/test/e2e/: test_client_v1.py
python/scripts/: prepare_binary.sh
test/e2e/: run.sh  sandbox.json
test/e2e/cases/: run_ipython_cell.json  run_shell_command.json
